--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Seonggyun Kim</title>
+  <!-- SEO Meta -->
+  <meta name="description" content="Seonggyun Kim – Master's student in Chemical Engineering at KTH." />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seonggyun Kim</title>
+  <!-- Open Graph -->
+  <meta property="og:title" content="Seonggyun Kim – Research & Projects" />
+  <meta property="og:description" content="Chemical Engineering, decarbonization, front-end development, and music." />
+  <meta property="og:url" content="https://www.seonggyun.kim/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.seonggyun.kim/assets/preview.png" />
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Person",
+        "name": "Seonggyun Kim",
+        "url": "https://www.seonggyun.kim",
+        "sameAs": [
+          "https://github.com/seonggyun",
+          "https://linkedin.com/in/seonggyun"
+        ],
+        "jobTitle": "Master's Student in Chemical Engineering",
+        "affiliation": {
+          "@type": "CollegeOrUniversity",
+          "name": "KTH Royal Institute of Technology"
+        }
+      },
+      {
+        "@type": "WebSite",
+        "url": "https://www.seonggyun.kim",
+        "name": "Seonggyun Kim – Research & Projects",
+        "publisher": {
+          "@type": "Person",
+          "name": "Seonggyun Kim"
+        }
+      }
+    ]
+  }
+  </script>
+
 
   <!-- Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
