--- a/social.html
+++ b/social.html
@@ -41,7 +41,7 @@
         <a href="https://www.linkedin.com/in/seonggyunkim" target="_blank" rel="noopener">LinkedIn</a>
       </li>
       <li style="margin: .6rem 0;">
-        <a href="mailto:seonggyun.kim@outlook.com">Email</a> (seonggyun.kim@outlook.com)
+        <a href="mailto:contact@seonggyun.kim">Email</a> (contact@seonggyun.kim)
       </li>
     </ul>
   </main>
