--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta property="og:url" content="https://www.seonggyun.kim/" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://www.seonggyun.kim/assets/preview.png" />
+  <!-- Umami Analytics -->
+  <script async src="https://umami.seonggyun.kim/script.js" data-website-id="35e98543-699f-4f21-9bd5-5476f516f2ef"></script>
   <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
   {
@@ -81,7 +83,10 @@
       <!-- Master’s student in Chemical Engineering for Energy &amp; Environment at KTH.<br> -->
       <!-- Process simulation, thermodynamics, techno-economic analysis, etc.<br> -->
       Welcome! Thanks for visiting me, but this website is still a work in progress. Especially, currently there is very little consideration for mobile devices.<br>
-      If you are here to view my CV online, click <a href="cv-seonggyun-kim.pdf">here</a>.
+      If you are here to view my CV online, click <a href="cv-seonggyun-kim.pdf"
+     target="_blank"
+     data-umami-event="cv_download"
+     data-umami-event-file="cv-seonggyun-kim.pdf">here</a>.
     </p>
     <!-- <a class="cta-btn">View Projects</a> -->
   </header>
