--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       Welcome! Thanks for visiting me, but this website is still a work in progress. Especially, currently there is very little consideration for mobile devices.<br>
       If you are here to view my CV online, click <a href="cv-seonggyun-kim.pdf"
      target="_blank"
-     data-umami-event="cv_download"
+     data-umami-event="cv_download_mainpage"
      data-umami-event-file="cv-seonggyun-kim.pdf">here</a>.
     </p>
     <!-- <a class="cta-btn">View Projects</a> -->
