Add MSc thesis to projects page

--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,16 @@
         </tr>
       </thead>
       <tbody>
+        <!-- 2025 ---------------------------------------------------------->
+        <tr onclick="toggleDetails(this)"
+            data-category="Master's Thesis | KTH Royal Institute of Technology"
+            data-desc="Built steady-state process model and dynamic reactor model in <b>Aspen Dynamics</b> for Power-to-Methanol process. | Developed MILP optimization framework integrating dynamic constraints to determine optimal operating schedules against Swedish electricity prices (2019–2023). | Achieved cost reductions up to 24.5% through flexibility-aware scheduling during high price volatility periods."
+            data-link1-name="Thesis"
+            data-link1-url="projects/msc-thesis-seonggyun-kim.pdf">
+          <td class="clickable-project">Dynamic Reactor Modeling and Operational Optimization of Flexible E‑Methanol Production</td>
+          <td class="year-column">2025</td>
+        </tr>
+
         <!-- 2024 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
             data-category="KTH Royal Institute of Technology"
