Add MSc thesis to projects page

--- a/social.html
+++ b/social.html
@@ -35,7 +35,7 @@
     <ul style="list-style: none; padding: 0; margin: 0 0 2rem; font-size: 1.05rem;">
 
       <li style="margin: .6rem 0;">
-        <a href="https://github.com/kmsnggyn" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/seonggyun-kim" target="_blank" rel="noopener">GitHub</a>
       </li>
       <li style="margin: .6rem 0;">
         <a href="https://www.linkedin.com/in/seonggyunkim" target="_blank" rel="noopener">LinkedIn</a>
